crates/strider/tests/snapshots/arm_be__complex__multi_arg_call_in_branch.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x10114:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff8800", label=arg7, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg8, fontcolor="#cccccc", fontsize=9];
  "12" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "5" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "12" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "19" [label="φ d1", shape=house, fillcolor="#163030"];
  "12" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v20" [color="#888888", style=dashed];
  "v20" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v21" [color="#888888", style=dashed];
  "v21" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x10114:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "13" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "8" -> "13" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "13" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "10" -> "13" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "9" -> "13" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "8" -> "13" [color="#ff8800", label=arg7, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#ff8800", label=arg8, fontcolor="#cccccc", fontsize=9];
  "11" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "23" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "27" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "29" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "31" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "33" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "35" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "38" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v39" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v39" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "38" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="φ d0", shape=house, fillcolor="#163030"];
  "12" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v41" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v41" [color="#888888", style=dashed];
  "v41" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v42" [color="#888888", style=dashed];
  "v42" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ r1", shape=house, fillcolor="#163030"];
  "12" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v43" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v43" [color="#888888", style=dashed];
  "v43" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v44" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v44" [color="#888888", style=dashed];
  "v44" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" [label="φ Val", shape=house, fillcolor="#163030"];
  "12" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "45" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "46" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v47" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v47" [color="#888888", style=dashed];
  "v47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "45" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v49" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v49" [color="#888888", style=dashed];
  "v49" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="φ Mem", shape=house, fillcolor="#163030"];
  "12" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "51" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "53" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v54" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v54" -> "52" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "46" -> "52" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "53" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "55" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "53" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v47" -> "53" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "13" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "55" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v47" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "58" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "51" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "51" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "60" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v61" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v61" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v49" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "60" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "5" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "60" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v49" -> "60" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "11" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
